--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "sw-vite",
+  "name": "sw-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "npm run build && vite preview --port 3333"
   },
   "devDependencies": {
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "ids-enterprise-wc": "^1.0.0-beta.13"
   }
 }
